<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:paddingHorizontal="40dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/profile"
                android:textSize="34sp"
                android:fontFamily="@font/robotoserif_thin"
                android:gravity="center"
                android:layout_marginTop="40dp"/>
            <TextView
                android:id="@+id/profileName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/name"
                android:gravity=""
                android:layout_margin="4dp"/>
            <TextView
                android:id="@+id/profileSurname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/surname"
                android:gravity=""
                android:layout_margin="4dp"/>
            <TextView
                android:id="@+id/profileDob"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/date_of_birth"
                android:gravity=""
                android:layout_margin="4dp"/>
            <TextView
                android:id="@+id/profilePhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/phone_number"
                android:gravity=""
                android:layout_margin="4dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/profileLogoutButton"
                    android:layout_width="125dp"
                    android:layout_height="48dp"
                    android:text="@string/logout"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>