<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OrderFragment"
    android:paddingHorizontal="40dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".login.LoginActivity"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/order_data"
                android:textSize="34sp"
                android:fontFamily="@font/robotoserif_thin"
                android:gravity="center"
                android:layout_marginTop="40dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/order_home_address">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/orderHomeAddress"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/order_city">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/orderCity"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPostalAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/order_postal_code">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/orderPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPostalAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/orderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/order_button" />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>